# flutter_multitracker

./: .cursorrules  CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  instrument_manager.cpp  instrument_manager.h  multitracker_ffi.cpp  multitracker_jni.cpp  sequence_manager.cpp  sequence_manager.h  utils.h
android/src/main/java/com/example/flutter_multitracker/: AudioEngine.java  FlutterMultitrackerPlugin.java  SequenceManager.java
android/src/main/kotlin/com/example/flutter_multitracker/: FlutterMultitrackerPlugin.kt
android/src/main/kotlin/com/raybsou/flutter_multitracker/: FlutterMultitrackerPlugin.kt  SimpleAudioEngine.kt
example/: README.md  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle  build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/assets/sfz/: GMPiano.sfz  README.md  meanquar.scl
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: audio_helper.dart  main.dart  sequencer_demo.dart  sine_wave_generator.dart
example/test/: widget_test.dart
ios/: flutter_multitracker.podspec
ios/Classes/: FlutterMultitrackerPlugin-Bridging-Header.h  FlutterMultitrackerPlugin.swift  multitracker_bridge.h  multitracker_bridge.mm  multitracker_ffi.cpp
lib/: flutter_multitracker.dart  flutter_multitracker_ffi.dart  flutter_multitracker_ffi_impl.dart  flutter_multitracker_method_channel.dart  flutter_multitracker_platform_interface.dart  flutter_multitracker_web.dart
lib/models/: automation.dart  instrument.dart  models.dart  note.dart  sequence.dart  track.dart
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
test/: flutter_multitracker_method_channel_test.dart  flutter_multitracker_test.dart
(+2 files in other folders)
